Clear DATABASE_URL in .env.example
Removed sensitive database URL from example file.

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 BETTER_AUTH_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
 
 # Database
-DATABASE_URL=psql 'postgresql://neondb_owner:npg_Nwu0aQoRX1YO@ep-ancient-brook-ahtrb28j-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL=
