feat(spec-003): implement frontend todo app with Next.js
- Add Next.js app router structure
- Replace old React auth components
- TypeScript setup with contexts, providers, and services
- Update backend integrations
- Update ADR and spec history for frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "todo-frontend",
-  "version": "1.0.0",
-  "description": "Frontend for todo application with Better Auth",
-  "main": "index.js",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.0.0",
-    "better-auth": "^0.2.0",
-    "jose": "^5.2.2",
-    "@types/react": "^18.2.0",
-    "@types/node": "^20.0.0"
+    "axios": "^1.13.2",
+    "better-auth": "^1.4.15",
+    "next": "16.1.3",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.30",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.3",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
