--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
   "dev:frontend": "cd frontend && npm install && npm run dev",
   "dev:backend": "cd backend && uvicorn src.main:app --reload",
-  "build": "npm run build:frontend && npm run build:backend",
+  "build": "npm run build:frontend",
   "build:frontend": "cd frontend && npm install && npm run build",
   "build:backend": "cd backend && python -m build",
   "test": "npm run test:frontend && npm run test:backend",
