--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Full-stack todo application with authentication",
   "main": "index.js",
   "scripts": {
-  "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-  "dev:frontend": "cd frontend && npm install && npm run dev",
-  "dev:backend": "cd backend && uvicorn src.main:app --reload",
-  "build": "npm run build:frontend",
-  "build:frontend": "cd frontend && npm install && npm run build",
-  "build:backend": "cd backend && python -m build",
-  "test": "npm run test:frontend && npm run test:backend",
-  "test:frontend": "cd frontend && npm run test",
-  "test:backend": "cd backend && pytest"
-},
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && uvicorn src.main:app --reload",
+    "build": "npm run build:frontend && npm run build:backend",
+    "build:frontend": "cd frontend && npm run build",
+    "build:backend": "cd backend && python -m build",
+    "test": "npm run test:frontend && npm run test:backend",
+    "test:frontend": "cd frontend && npm run test",
+    "test:backend": "cd backend && pytest"
+  },
   "keywords": ["todo", "authentication", "full-stack"],
   "author": "",
   "license": "MIT",
